Fix template in style.css
Was not set to Mayflower, causing a dependancy on Twenty Fifteen

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
  Description:  Mayflower Child Theme to provide custom Bellevue College Homepage
  Author:       Bellevue College Information Technology Services
  Author URI:   http://www.bellevuecollege.edu
- Template:     mayflower-homepage
+ Template:     mayflower
  Version:      0.0.0.1
  License:      GNU General Public License v2 or later
  License URI:  http://www.gnu.org/licenses/gpl-2.0.html
