--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 /*
- Theme Name:   Mayflower Homepage
- Theme URI:    http://github.com/bellevuecollege/mayflower-homepage/
- Description:  Mayflower Child Theme to provide custom Bellevue College Homepage
- Author:       Bellevue College Information Technology Services
- Author URI:   http://www.bellevuecollege.edu
- Template:     mayflower
- Version:      0.0.0.1
- License:      GNU General Public License v2 or later
- License URI:  http://www.gnu.org/licenses/gpl-2.0.html
- Tags:         accessibility-ready
- Text Domain:  mayflower-homepage
+ Theme Name:       Mayflower Homepage
+ Theme URI:        http://github.com/bellevuecollege/mayflower-homepage/
+ Description:      Mayflower Child Theme to provide custom Bellevue College Homepage
+ Author:           Bellevue College Information Technology Services
+ Author URI:       http://www.bellevuecollege.edu
+ Template:         mayflower
+ Version:          0.0.0.1
+ GitHub Theme URI: bellevuecollege/mayflower-homepage
+ License:          GNU General Public License v2 or later
+ License URI:      http://www.gnu.org/licenses/gpl-2.0.html
+ Tags:             accessibility-ready
+ Text Domain:      mayflower-homepage
 */
