--- a/style.css
+++ b/style.css
@@ -185,53 +185,54 @@
   #home-events {
     margin-top: 0px;
   }
-  /* line 168, sass/style.scss */
-  #home-news h2,
-  #home-events h2 {
-    font-size: 1em;
-    line-height: 1.66667em;
-  }
 
-  /* line 174, sass/style.scss */
+  /* line 170, sass/style.scss */
   .resources-menu li {
     font-size: 1em;
   }
-  /* line 177, sass/style.scss */
+  /* line 173, sass/style.scss */
   .resources-menu .content-padding {
     padding: 0 2em;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 992px) {
-  /* line 184, sass/style.scss */
+  /* line 180, sass/style.scss */
   .resources-menu {
     display: -webkit-flex;
     display: flex;
   }
-  /* line 186, sass/style.scss */
+  /* line 182, sass/style.scss */
   .resources-menu section {
     -webkit-flex: 1;
     flex: 1;
   }
-  /* line 189, sass/style.scss */
+  /* line 185, sass/style.scss */
   .resources-menu section:last-child {
     margin-top: 0;
   }
 }
 @media screen and (min-width: 992px) {
-  /* line 196, sass/style.scss */
+  /* line 192, sass/style.scss */
   #mobilelinks {
     display: none;
+  }
+}
+@media screen and (min-width: 1200px) {
+  /* line 199, sass/style.scss */
+  .resources-menu li {
+    font-size: 1.15em;
+    line-height: 1.666em;
   }
 }
 /* ##################################### */
 /* Slider bc home page override */
 /* ###################################### */
-/* line 204, sass/style.scss */
+/* line 208, sass/style.scss */
 .bchome .carousel-inner {
   box-shadow: 0 2px 8px #cdcdcd;
 }
 
-/* line 207, sass/style.scss */
+/* line 211, sass/style.scss */
 .bchome .carousel-caption h2 {
   display: inline;
   font-size: 1em;
@@ -239,13 +240,13 @@
   font-family: Helvetica,​Arial,​sans-serif;
 }
 
-/* line 212, sass/style.scss */
+/* line 216, sass/style.scss */
 .bchome .carousel-caption p {
   display: none;
 }
 
 @media screen and (min-width: 60em) {
-  /* line 216, sass/style.scss */
+  /* line 220, sass/style.scss */
   .bchome .carousel-caption p {
     display: inline;
   }
