Standardize Link Color in Legal Footer
Resolves https://integrationbc.atlassian.net/browse/ACTIVE-143

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -95,7 +95,9 @@ $browser-minimum-versions: (
 		padding: 0 1em;
 		border-left: 1px solid #ddd;
 	}
-	a:link {
+	a,
+	a:link,
+	a:visited {
 		color: #666;
 	}
 	a:active,
