--- a/sass/style.scss
+++ b/sass/style.scss
@@ -13,16 +13,6 @@
  Text Domain:      mayflower-homepage
 */
 
-/* Set Browser Support */
-$critical-usage-threshold: 0.1;
-$graceful-usage-threshold: 2;
-$browser-minimum-versions: (
-  "ie": "10",
-);
-
-/* Load compass helpers */
-@import "compass";
-
 /* ###################################### */
 /* ----- BC Home Page only          ----- */
 /* ###################################### */
@@ -54,6 +44,7 @@ $browser-minimum-versions: (
 		font-style:italic;
 		color: #6a6a6a;
 		padding-top: 1em;
+		margin-bottom: 0;
 	}
 	ul {
 		list-style: none;
@@ -84,6 +75,8 @@ $browser-minimum-versions: (
 	padding: .25em 0;
 	ul {
 		list-style-type: none;
+		margin: 0 1em;
+		padding: 0;
 	}
 	ul li {
 		display: inline;
@@ -109,7 +102,7 @@ $browser-minimum-versions: (
 	}
 
 	background: #fff;
-	@include box-shadow (-2px 2px 2px rgba(160, 160, 160, 0.7), 2px 2px 2px rgba(160, 160, 160, 0.7));
+	box-shadow: -2px 2px 2px rgba(160, 160, 160, 0.7), 2px 2px 2px rgba(160, 160, 160, 0.7);
 }
 
 
@@ -124,7 +117,7 @@ $browser-minimum-versions: (
 
 #home-news,
 #home-events {
-	@include background-image(linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%));
+	background-image: linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%);
 	margin-top: 2em;
 	header {
 		background-color: #003D79;
@@ -134,6 +127,7 @@ $browser-minimum-versions: (
 		font-size: 1.2em;
 		line-height: 1.66667em;
 		white-space: nowrap;
+		margin: 0;
 	}
 	ul {
 		margin: 0.6666667em 0 1em 0;
@@ -189,11 +183,9 @@ $browser-minimum-versions: (
 
 @media screen and (min-width: 768px) and (max-width: 991px) {
 	.resources-menu {
-		display: -ms-flexbox;
-		@include display-flex;
+		display: flex;
 		section {
-			-ms-flex: 1;
-			@include flex(1);
+			flex: 1;
 		}
 		section {
 			margin-top: 0;
