--- a/sass/style.scss
+++ b/sass/style.scss
@@ -13,6 +13,33 @@
  Text Domain:      mayflower-homepage
 */
 
+/* Colors */
+$brand-primary: #003D79; // BC Brand Primary Blue
+$brand-success: #317131; // Darkened to meet a11y AA requirements
+$brand-info: #afd7ff; // Lightened BC Brand Blue to meet a11y requirements
+$brand-warning: #F2C01E; // BC Brand Yellow
+$brand-danger: #C4122F; // BC Brand Red
+$btn-info-color: #162F57;
+$btn-warning-color: #000;
+$btn-warning-border: #E36F1E; //BC Brand Orange
+$bg-color: #F5F5F5;
+
+$bc-orange: #E36F1E;
+$bc-green: #AAB720;
+
+/* Typography */
+$font-body: Helvetica, Arial, sans-serif;
+$font-heading: Georgia, "Times New Roman", Times, serif;
+$font-monospace: Monaco, Menlo, Consolas, "Courier New", monospace;
+$std-line-height: 1.66666667em;
+$std-margin: 1em;
+$sm-margin: $std-margin/3;
+
+/* Bootstrap Breakpoints */
+$breakpoint-bs-sm: 48em;
+$breakpoint-bs-md: 62em;
+$breakpoint-bs-lg: 75em;
+
 /* ###################################### */
 /* ----- BC Home Page only          ----- */
 /* ###################################### */
@@ -396,5 +423,144 @@
 		.carousel-control.right {
 			right: 5%;
 		}		
+	}
+}
+
+
+
+/// New
+#mfhomepage-top-menus {
+	margin-top: 1em;
+	
+	justify-content: space-between;
+
+	& > div > div {
+		display: block;
+	}
+
+	h2 {
+		display: block;
+		clear: none;
+		margin: 0;
+		vertical-align: middle;
+		font-size: 1rem;
+		padding-right: .25em;
+	}
+
+	#mfhomepage-menus-for {
+		padding-left: 1em;
+		padding-right: .25em;
+	}
+
+	#mfhomepage-menus-for,
+	#mfhomepage-resources,
+	#mfhomepage-contact {
+		float: left;
+		width: 50%;
+		
+
+		.btn-block,
+		.btn-group-justified {
+			margin-top: 5px;
+			display: block;
+		}
+
+		& > div {
+			flex-direction: column;
+		}
+
+	}
+	#mfhomepage-resources {
+		float: right;
+		padding-left: .25em;
+		padding-right: 1em;
+	}
+	#mfhomepage-contact {
+		text-align: right;
+		float: right;
+
+		padding-left: .25em;
+		padding-right: 1em;
+
+		& > div {
+			display: flex;
+			flex-direction: row;
+		}
+	}
+}
+
+#homeslider {
+	margin-top: .75em;
+}
+
+//////
+// News and Events
+/////
+#mfhomepage-news-events {
+	display: flex;
+	flex-direction: column;
+
+	background: $brand-primary;
+
+	margin: 1rem 0 0 0;
+	padding: 1em;
+
+	& h2 {
+		color: #fff;
+		font-size: 1.2em;
+		margin:0;
+		margin-bottom: .5em;
+	}
+}
+
+@media ( min-width: $breakpoint-bs-sm ) {
+	#mfhomepage-top-menus {
+
+		#mfhomepage-menus-for {
+			padding: 0;
+			padding-right: .25em;
+		}
+		#mfhomepage-resources,
+		#mfhomepage-contact {
+			padding: 0;
+			padding-left: .25em;
+
+		}
+
+	}
+}
+
+@media ( min-width: $breakpoint-bs-md ) {
+	#mfhomepage-top-menus {
+		display: flex;
+
+		margin-top: .5em;
+		
+		h2 {
+			display: inline-block;
+		}
+
+		#mfhomepage-menus-for,
+		#mfhomepage-resources,
+		#mfhomepage-contact {
+			flex: 1 0 auto;
+			width: auto;
+			display: flex;
+			align-items: center;
+
+
+			& > div {
+				display: flex;
+				flex-direction: row;
+			}
+
+		}
+		#mfhomepage-resources {
+			margin: 0 1em;
+		}
+		#mfhomepage-contact {
+			text-align: right;
+			flex: 0 0 auto;
+		}
 	}
 }
