--- a/sass/style.scss
+++ b/sass/style.scss
@@ -505,7 +505,6 @@ $breakpoint-bs-lg: 75em;
 		flex-direction: column;
 		justify-content: center;
 
-
 		margin-top: 1em;
 		margin-bottom: 1em;
 
@@ -550,8 +549,6 @@ $breakpoint-bs-lg: 75em;
 		div {
 			background: rgba(0, 0, 0, .6);
 			text-align: center;
-			//display: flex;
-			//justify-content: center;
 		}
 
 		p {
@@ -570,7 +567,7 @@ $breakpoint-bs-lg: 75em;
 		&:hover,
 		&:active,
 		&:focus {
-			border-color: #000;
+			box-shadow: 0 0 5px #000;
 			div {
 				background: #000;
 			}
@@ -655,6 +652,8 @@ a.mfhomepage-card:active,
 a.mfhomepage-card:focus {
 	color:#000;
 	background: #e6e5e5;
+
+	box-shadow: 0 0 5px #000;
 
 }
 
@@ -794,10 +793,10 @@ a.mfhomepage-card:focus {
 		flex-direction: row;
 		
 		& .mfhomepage-content-module {
+			margin: 0;
 			margin-right: 1em;
 
 			border: 1px solid #e6e5e5;
-			border-radius: 5px;
 
 			&:last-child {
 				margin-right: 0;
