--- a/sass/style.scss
+++ b/sass/style.scss
@@ -204,10 +204,19 @@ $breakpoint-bs-lg: 75em;
 	margin-top: .75em;
 }
 
-#mfhomepage-content {
-	margin-top: 1em;
+#mfhomepage-content .mfhomepage-row {
 	display: flex;
 	flex-direction: column-reverse;
+
+	margin-top: 1em;
+
+	&:last-child {
+		margin-top: 0;
+	}
+	
+	&:first-child {
+		margin-top: 1em;
+	}
 	
 	& .mfhomepage-content-module {
 
@@ -215,12 +224,11 @@ $breakpoint-bs-lg: 75em;
 		flex-direction: column;
 		justify-content: center;
 
-		margin-top: 1em;
 		margin-bottom: 1em;
 
 		padding: 1em;
-		min-width: calc(33% - 1em);
-		min-height: 12rem;
+
+		flex: 1 0 auto;
 
 		background: #fff;
 
@@ -245,9 +253,10 @@ $breakpoint-bs-lg: 75em;
 		}
 	}
 	& a.mfhomepage-content-module {
-		text-decoration: none;
 
-		flex: 1 0 auto;
+		min-height: 12rem;
+
+		text-decoration: none;
 
 		padding: 1em 0;
 
@@ -498,15 +507,24 @@ a.mfhomepage-card:focus {
 
 	}
 
-	#mfhomepage-content {
+	#mfhomepage-content .mfhomepage-row {
 		margin-top: 1em;
+		margin-bottom: 1em;
 		flex-direction: row;
+
+		&:last-child {
+			margin-bottom: 0;
+		}
 		
 		& .mfhomepage-content-module {
-			margin: 0;
+
+			flex-basis: calc(33% - 1em);
+
 			margin-right: 1em;
 
 			border: 1px solid #e6e5e5;
+
+			margin-bottom: 0;
 
 			&:last-child {
 				margin-right: 0;
@@ -536,7 +554,7 @@ a.mfhomepage-card:focus {
 		flex-grow: 0;
 		flex-shrink: 0;
 		flex-basis: calc(75% - .5em);
-		
+
 		margin-left: .5em;
 	}
 
