--- a/sass/style.scss
+++ b/sass/style.scss
@@ -40,6 +40,8 @@ $breakpoint-bs-sm: 48em;
 $breakpoint-bs-md: 62em;
 $breakpoint-bs-lg: 75em;
 
+$bg-transparent: rgba( 0, 0, 0, .54 );
+
 /* ###################################### */
 /* ----- BC Home Page only          ----- */
 /* ###################################### */
@@ -213,7 +215,7 @@ $breakpoint-bs-lg: 75em;
 	&:last-child {
 		margin-top: 0;
 	}
-	
+
 	&:first-child {
 		margin-top: 1em;
 	}
@@ -266,20 +268,17 @@ $breakpoint-bs-lg: 75em;
 		background-size: cover;
 
 		div {
-			background: rgba(0, 0, 0, .6);
+			background: $bg-transparent;
 			text-align: center;
 		}
 
 		p {
-			display: inline-block;
 			text-align: center;
 			margin: .5em;
 			padding: .25em .75em;
 
 			text-decoration: none;
 			color: #fff;
-
-			font-weight: bold;
 
 		}
 
@@ -293,10 +292,15 @@ $breakpoint-bs-lg: 75em;
 		}
 
 		&.mfhomepage-button {
-			p {
+
+			strong {
+				padding: .25em .75em;
+				margin: .5em;
+				
+				display: inline-block;
 				border-radius: 5px;
-				border: 2px solid #e6e5e5;
-				background: rgba(0, 0, 0, .6);
+				border: 1px solid #e6e5e5;
+				background: $bg-transparent;
 			}
 		}
 	}
@@ -338,6 +342,8 @@ a.mfhomepage-card {
 
 	margin: 1em 0;
 	padding: 1em;
+
+	text-decoration: none;
 
 	h3, h4 {
 		font-family: $font-body;
@@ -400,7 +406,7 @@ a.mfhomepage-card:focus {
 		}
 
 		h3 {
-			background: rgba(0, 0, 0, .6);
+			background: $bg-transparent;
 			display: block;
 			padding: 1em;
 			color: #fff;
