--- a/sass/style.scss
+++ b/sass/style.scss
@@ -661,12 +661,6 @@ a.mfhomepage-card:focus {
 }
 
 
-
-
-
-
-
-
 /* ###################################### */
 /* ----- Featured Slider            ----- */
 /* ###################################### */
@@ -679,17 +673,21 @@ a.mfhomepage-card:focus {
 	min-height: 350px;
 }
 
-.carousel-caption {
-	padding: 20px;
-	margin: 0 auto;
-	text-align: left;
+.caption-container {
 	-webkit-transform: translate(0, 25%);
 	-ms-transform: translate(0, 25%); 
 	transform: translate(0, 25%); 
+}
+
+.carousel-caption {
+	padding: 20px;
+	text-align: left;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
 	background-color: rgba(0, 0, 0, 0.5);
+	border-radius: 4px;
+	position: static;
 
 	h1 {
 		font-size: 1.75em; 
@@ -709,10 +707,9 @@ a.mfhomepage-card:focus {
 
 	.btn-primary-outline {
 		background-color: transparent;
-		border: 2px #fff solid;
+		border: 1px #fff solid;
 	}
 
-	/*might need to move?*/
 	.carousel-header {
 		flex-grow: 1;
 	}
@@ -728,6 +725,7 @@ a.mfhomepage-card:focus {
 	
 	.carousel-more {
 		flex-grow: 1;
+		border-radius: 4px;
 	}
 }
 
@@ -756,6 +754,7 @@ a.mfhomepage-card:focus {
 	white-space: normal;
 	line-height: 1em;
 	border: 1px solid #fff;
+	border-radius: 4px;
 
 	&.next-slide {
 		right: 0;
@@ -766,6 +765,10 @@ a.mfhomepage-card:focus {
 .carousel-control:hover {
 	background-color: #001c37;
 	opacity: 1.0;
+}
+
+a.carousel-control:focus {
+	border-radius: 4px;
 }
 
 
@@ -787,13 +790,13 @@ a.mfhomepage-card:focus {
 	background-color: #003D79;
 
 	&:first-child {
-		border-top-right-radius: 0.5em;
-		border-top-left-radius: 0.5em;
+		border-top-right-radius: 4px;
+		border-top-left-radius: 4px;
 	}
 
 	&:last-child {
-		border-bottom-right-radius: 0.5em;
-		border-bottom-left-radius: 0.5em;
+		border-bottom-right-radius: 4px;
+		border-bottom-left-radius: 4px;
 	}
 }
 
@@ -812,22 +815,18 @@ a.list-group-item:hover {
 }
 
 .list-group-icon {
-	border-radius: 0.5em;
+	border-radius: 4px;
 	max-width: 53px;
 }
 
 .list-group-icon:hover {
-	border-radius: 0.5em;
+	border-radius: 4px;
 }
 
 @media (min-width: 48em) { /*768px*/
 	.carousel-caption {
 		max-width: 40%;
-		min-height: 18em;
-		top: 50%;
-		-webkit-transform: translate(-50%, -50%); 
-		-ms-transform: translate(-50%, -50%); 
-		transform: translate(-50%, -50%);
+		min-height: 16em;
 
 		h1 {
 			font-size: 2em;
@@ -894,7 +893,6 @@ a.list-group-item:hover {
 @media (min-width: 62em) { /*992px*/
 	.carousel-caption {
 		max-width: 40%;
-		top: 50%;
 
 		h1 {
 			font-size: 2.25em;
@@ -962,12 +960,14 @@ a.list-group-item:hover {
 		min-height: 500px;
 	}
 
+	.caption-container{
+		-webkit-transform: translate(0, 50%);
+		-ms-transform: translate(0, 50%); 
+		transform: translate(0, 50%); 
+	}
+
 	.carousel-caption {
 		max-width: 40%;
-		top: 50%;
-		-webkit-transform: translate(-50%, -50%); 
-		-ms-transform: translate(-50%, -50%); 
-		transform: translate(-50%, -50%); 
 
 		h1 {
 			font-size: 2.5em; 
