--- a/sass/style.scss
+++ b/sass/style.scss
@@ -685,12 +685,12 @@ a.mfhomepage-card:focus {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	background-color: rgba(0, 0, 0, 0.5);
+	background-color: $bg-transparent;
 	position: static;
 
 	h1 {
 		font-size: 1.75em; 
-		font-family: Helvetica, Arial, sans-serif;
+		font-family: $font-body;
 		font-weight: bold;
 		margin: 0;
 	}
@@ -701,7 +701,7 @@ a.mfhomepage-card:focus {
 
 	button:hover {
 		color: #fff;
-		background-color: rgba(0, 0, 0, 0.5);
+		background-color: $bg-transparent;
 	}
 
 	.btn-primary-outline {
@@ -739,16 +739,13 @@ a.mfhomepage-card:focus {
 
 .carousel-control {
 	width: 84%;
-	// max-width: 260px;
 	height: auto;
-	// min-height: 47px;
 	bottom: auto;
 	font-size: 1.05em;
 	padding: 15px;
 	top: 0;
 	opacity: 1.0;
 	background-color: #003d79;
-	// white-space: normal;
 	line-height: 1em;
 	border: 1px solid #fff;
 	border-radius: 4px;
@@ -786,7 +783,7 @@ a.carousel-control:focus {
 
 .list-group-item {
 	opacity: 1.0;
-	background-color: #003D79;
+	background-color: $brand-primary;
 	border: 1px solid #fff;
 
 	&:first-child {
@@ -817,23 +814,19 @@ a.list-group-item:hover {
 .list-group-icon {
 	border-radius: 4px;
 	max-width: 15%;
-	height: auto; //47px
-	font-size: 2em;
-	padding: 6px 0 6px 0;
+	height: auto;
+	font-size: 1em;
 }
-
-// .list-group-icon > .glyphicon-th-list, .list-group-icon > .glyphicon-remove {
-// 	top: 5px;
-// }
 
 .list-group-icon:hover {
 	border-radius: 4px;
 }
 
-@media (min-width: 48em) { /*768px*/
+@media (min-width: $breakpoint-bs-sm) {
 	.carousel-controls {
 		position: relative;
 		bottom: 60px;
+		margin: 0;
 	} 
 
 	.carousel-caption {
@@ -861,14 +854,14 @@ a.list-group-item:hover {
 		padding: 18px;
 		line-height: 0.5em;  
 		max-width: 100%;
-		background-color: rgba(0, 0, 0, 0.5);
+		background-color: $bg-transparent;
 
 		&:hover {
 			background-color: rgba(0, 0, 0, 0.75);
 		}
 
 		&.next-slide {
-			right: 49px;
+			right: 57px;
 			left: auto;
 		}
 	}
@@ -899,21 +892,16 @@ a.list-group-item:hover {
 
 	.list-group-icon {
 		border-radius: 4px;
-		padding: 5px;
 		max-width: none;
-		font-size: 1.75em;
+		font-size: 1.1em;
 	}
 
-	// .list-group-icon > .glyphicon-th-list, .list-group-icon > .glyphicon-remove {
-	// 	top: 1px;
-	// }
-
 	.list-group-item {
-		background-color: rgba(0, 0, 0, 0.5);
+		background-color: $bg-transparent;
 	}
 }
 
-@media (min-width: 62em) { /*992px*/
+@media (min-width: $breakpoint-bs-md) {
 	.carousel-caption {
 		max-width: 40%;
 
@@ -927,7 +915,7 @@ a.list-group-item:hover {
 	}
 }
 
-@media (min-width: 75em) { /*1200px*/
+@media (min-width: $breakpoint-bs-lg) {
 	.carousel-caption {
 		h1 {
 			font-size: 2.5em;
